--- a/outputs/findings/01_map.rmd
+++ b/outputs/findings/01_map.rmd
@@ -165,6 +165,10 @@ filter_select(
 
 ```
 
+[The real damage: Why FEMA is denying aid to Black disaster survivors in the Deep South](https://www.washingtonpost.com/nation/2021/07/11/fema-black-owned-property)
+
+The Post reviewed more than 9.5 million applications to FEMA's Individuals and Households Program since 2010 to determine rejection rates based on land title issues. Details on the Post's methodology and summarized data can be found on [GitHub](https://github.com/wpinvestigative/fema_ihp_denials).
+
 
 Row
 -------------------------------------
